# mysql_aws_s3_engine

./: AUTHORS  COPYING  Makefile.am  Makefile.in  README  README.md.txt  TODO  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  ha_awss3.cc  ha_awss3.h  hmac.h  md5.h  memxor.c  memxor.h  sha1.h  str_percent.c  str_percent.h  str_quotify.c  str_quotify.h
